welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:15: error: ')' expected but '}' found.
		}
                ^